--- a/apps/http/package.json
+++ b/apps/http/package.json
@@ -11,8 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@repo/db": "*",
     "@types/express": "^5.0.0",
     "express": "^4.21.2",
-    "typescript": "^5.7.3"
+    "jsonwebtoken": "^9.0.2",
+    "typescript": "^5.7.3",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.8"
   }
 }
