--- a/apps/ws/package.json
+++ b/apps/ws/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http",
+  "name": "ws",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -13,13 +13,10 @@
   "description": "",
   "dependencies": {
     "@repo/db": "*",
-    "@types/express": "^5.0.0",
-    "express": "^4.21.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/ws": "^8.5.12",
+    "esbuild": "^0.24.0",
     "jsonwebtoken": "^9.0.2",
-    "typescript": "^5.7.3",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.8"
+    "ws": "^8.18.0"
   }
 }
